syntax = "proto3";

//普通用户CRUD操作，可电话号码或者用户ID做KEY

// 增加用户
message ConsumerCreateRequest {
    string numbers = 1;
    uint64 identity = 2;
	ConsumerMaterial material = 3;
};

message ConsumerCreateResponse {
};

// 读取用户
message ConsumerRetrieveRequest {
    string numbers = 1;
    uint64 identity = 2;
}

message ConsumerRetrieveResponse {
    ConsumerMaterial material = 1;
}

// 批量读取用户
message ConsumerBatchRetrieveRequest {
    repeated string numbers = 1;
    repeated uint64 identities = 2;
}

message ConsumerBatchRetrieveResponse {
    repeated ConsumerMaterial materials = 1;
}

// 更新用户
message ConsumerUpdateRequest {
    string numbers = 1;
    uint64 identity = 2;
    ConsumerMaterial material = 3;
}

message ConsumerUpdateResponse {

}

// 删除用户
message ConsumerDeleteRequest {
    string numbers = 1;
    uint64 identity = 2;
}

message ConsumerDeleteResponse {

}

// 普通用户资料
message ConsumerMaterial {
    string numbers = 1;
    string nickname = 2;
    string avatar = 3;  //TODO... 用户头像
	string sexy = 4;         //male，female，unknow
    uint32 age = 5;
    string email = 6;
    string introduce = 7;   //个人介绍
    string country = 8;
    string location = 9;    //地区，省市
    string qrcode = 10;     //二维码
    string create_time = 11;    //创建时间，response使用

    string identity = 20;    //商家ID，response使用
}