syntax = "proto3";

//package calculus.proto.lv2;

message RegisterRequest {
	string phone_number = 1;

	string password = 2;
	string password_md5 = 3;
};

message RegisterResponse {
};
